[package]
name = "tcp-forwarder-rust"
version = "0.2.8"
edition = "2021"
description = "高性能 TCP 转发器，支持 Cloudflare 优选 IP"
license = "MIT"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
axum = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
dashmap = "5.5"
arc-swap = "1.7"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
ipnet = { version = "2.9", features = ["serde"] }
rand = "0.8"
socket2 = "0.5"
futures = "0.3"
indicatif = "0.17"
json_comments = "0.2.2"
async-stream = "0.3"
rayon = "1.10"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
