[package]
name = "tcp-forwarder"
version = "0.1.0"
edition = "2024"

[dependencies]
# 异步运行时
tokio = { version = "1", features = ["full"] }
# 序列化与反序列化
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
# 配置管理
config = "0.13"
# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
# 时间处理
humantime-serde = "1.1"
# 错误处理
anyhow = "1.0"
# 并发数据结构
dashmap = "5.4"
# 随机数
rand = "0.8"
# 指标系统
metrics = "0.21"
metrics-exporter-prometheus = "0.12"
# Web服务器
axum = "0.7"
tower = "0.4"
# TCP socket配置
socket2 = "0.5"
# 异步utilities
futures = "0.3"
tower-http = { version = "0.5", features = ["cors"] }
