[package]
name = "tcp-forwarder"
version = "0.1.0"
edition = "2024"

[dependencies]
# 异步运行时
tokio = { version = "1", features = ["full"] }
# 序列化与反序列化
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
# 配置管理
config = "0.15"
# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
# 时间处理
humantime-serde = "1.1"
# 错误处理
anyhow = "1.0"
# 并发数据结构
dashmap = "6.1"
# 随机数
rand = "0.9"
# 指标系统 - 在移动平台上可选
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.17", optional = true }
# Web服务器 - 在移动平台上可选
axum = { version = "0.8", optional = true }
tower = { version = "0.5", optional = true }
# TCP socket配置
socket2 = "0.6"
# 异步utilities
futures = "0.3"
tower-http = { version = "0.6", features = ["cors"] }
# IP网络处理
ipnetwork = "0.21.1"

[features]
default = ["metrics-export", "web-server"]
# 指标导出功能
metrics-export = ["metrics-exporter-prometheus"]
# Web服务器功能
web-server = ["axum", "tower"]
# 移动平台精简版本
mobile = []
